# my_project_with_aff3ct

./: .gitignore  README.md
examples/cython_polar/src/: main.cpp
examples/mc_decoder/: CMakeLists.txt  README.md  run.sh
examples/mc_decoder/cmake/Modules/: aff3ct-config.cmake
examples/mc_decoder/src/: Codec_polar_mc.cpp  Codec_polar_mc.hpp  Decoder_polar_SCL_ecfast_sys copy 2.hpp  Decoder_polar_SCL_ecfast_sys copy 2.hxx  Decoder_polar_SCL_ecfast_sys copy.hpp  Decoder_polar_SCL_ecfast_sys copy.hxx  Decoder_polar_SCL_ecfast_sys.hpp  Decoder_polar_SCL_ecfast_sys.hxx  Decoder_polar_SCL_fast_sys.cpp  Decoder_polar_SCL_fast_sys.hpp  Decoder_polar_SCL_mcfast_sys.cpp  Decoder_polar_SCL_mcfast_sys.hpp  Decoder_polar_SCL_mcfast_sys.hxx  Decoder_polar_SCL_oldfast_sys.cpp  Decoder_polar_SCL_oldfast_sys.hpp  Decoder_polar_SCL_oldfast_sys.hxx  Decoder_polar_mc.cpp  Decoder_polar_mc.hpp  codec_polar.hpp  main.cpp  mc_func.hpp  test.cpp
examples/mc_decoder/src/generate_mc/: 16.txt  16even.txt  2.txt  2even.txt  32.txt  32even.txt  4.txt  4even.txt  64.txt  64even.txt  8.txt  8even.txt  mc_generate.py
examples/sequence/cmake/Modules/: aff3ct-config-version.cmake
examples/sequence/src/: main.cpp
